--- a/flyseats-frontend/src/app/app.component.scss
+++ b/flyseats-frontend/src/app/app.component.scss
@@ -445,7 +445,7 @@
   content: '';
   position: absolute;
   top: -8px;
-  right: 16px;
+  left: 16px;
   width: 14px;
   height: 14px;
   background: #1e1e32;
