--- a/flyseats-frontend/src/app/app.component.scss
+++ b/flyseats-frontend/src/app/app.component.scss
@@ -20,13 +20,13 @@
 }
 
 .nav-container {
-  max-width: 100%;
+  max-width: 1600px;
   margin: 0 auto;
-  padding: 8px 16px;
+  padding: 10px 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 24px;
+  gap: 28px;
 }
 
 /* Logo */
